# fastapi-xau-quant-copilot

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test_ai_judge.py  test_quant_core.py  xau_ai_judge.py  xau_diagnostics.py  xau_graph_evaluator.py  xau_massive_engine.py  xau_rag_memory.py  xau_state_manager.py  xau_trade_tracker.py  xau_visual_server.py
.github/workflows/: ci.yaml
data/: omni_ledger.csv
data/xau_rag_db/: chroma.sqlite3
data/xau_rag_db/3cc45e12-5c6f-4fe8-a519-512b792cf0be/: index_metadata.pickle
src/api/: judge.py  state.py
src/core/: engine.py  tracker.py
src/memory/: graph.py  rag.py
templates/: dashboard.html
tests/: test_ai_judge.py  test_quant_core.py
