# pyproject.toml
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-xau-quant-copilot"
version = "0.1.0"
description = "Asynchronous Quantitative Trading Engine and RAG Memory Bank for XAUUSD"
authors = ["AI Infrastructure Architecture <copilot@internal.net>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
numpy = "1.26.4"
httpx = "0.27.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "1.0.1"
chromadb = "0.5.0"
networkx = "3.3"
llama-index = "0.10.50"
ollama = "0.2.1"
litellm = "1.41.3"
yfinance = "0.2.40"
supabase = "2.5.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
websockets = "12.0"
pytest = "8.2.2"
pytest-asyncio = "0.23.7"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
ruff = "0.4.10"